--- a/src/modules/non-responsive/font-family.scss
+++ b/src/modules/non-responsive/font-family.scss
@@ -21,7 +21,7 @@
     serif;
 }
 
-$font-family-code: Consolas, monaco, monospace;
+$font-family-code: consolas, monaco, monospace;
 
 .code {
   font-family: $font-family-code;
