--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,6 @@
 @use './functions' as *;
 @use 'sass:color';
+@use 'sass:math';
 
 /*
    SPACERS
@@ -58,11 +59,11 @@ $sizer-levels: (
   '-10':         10%,
   '-20':         20%,
   '-30':         30%,
-  '-third':      100% / 3,
+  '-third':      math.div(100%, 3),
   '-40':         40%,
   '-50':         50%,
   '-60':         60%,
-  '-two-thirds': 100% * 2 / 3,
+  '-two-thirds': 100% * math.div(2, 3),
   '-70':         70%,
   '-80':         80%,
   '-90':         90%,
