--- a/src/modules/non-responsive/border-style.scss
+++ b/src/modules/non-responsive/border-style.scss
@@ -1,5 +1,7 @@
 @use '../../variables';
 
 @each $border-style in variables.$border-styles {
-  .b--#{$border-style} { border-style: $border-style; }
+  .#{variables.$global-prefix}b--#{$border-style} {
+    border-style: $border-style;
+  }
 }
