--- a/src/modules/non-responsive/font-family.scss
+++ b/src/modules/non-responsive/font-family.scss
@@ -1,4 +1,6 @@
-.sans-serif {
+@use '../../variables';
+
+.#{variables.$global-prefix}sans-serif {
   font-family:
     -apple-system,
     BlinkMacSystemFont,
@@ -14,7 +16,7 @@
     sans-serif;
 }
 
-.serif {
+.#{variables.$global-prefix}serif {
   font-family:
     georgia,
     times,
@@ -23,6 +25,6 @@
 
 $font-family-code: consolas, monaco, monospace;
 
-.code {
+.#{variables.$global-prefix}code {
   font-family: $font-family-code;
 }
