--- a/src/modules/responsive/_height.scss
+++ b/src/modules/responsive/_height.scss
@@ -1,9 +1,9 @@
 @use '../../variables';
 
 @mixin height($media-suffix) {
-
   @each $level, $value in variables.$sizer-levels {
-    .h#{$level}#{$media-suffix} { height: $value; }
+    .#{variables.$global-prefix}h#{$level}#{$media-suffix} {
+      height: $value;
+    }
   }
-
 }
