--- a/src/modules/non-responsive/border.scss
+++ b/src/modules/non-responsive/border.scss
@@ -1,29 +1,31 @@
-.ba {
+@use '../../variables';
+
+.#{variables.$global-prefix}ba {
   border-style: solid;
   border-width: 1px;
 }
 
-.bt {
+.#{variables.$global-prefix}bt {
   border-top-style: solid;
   border-top-width: 1px;
 }
 
-.br {
+.#{variables.$global-prefix}br {
   border-right-style: solid;
   border-right-width: 1px;
 }
 
-.bb {
+.#{variables.$global-prefix}bb {
   border-bottom-style: solid;
   border-bottom-width: 1px;
 }
 
-.bl {
+.#{variables.$global-prefix}bl {
   border-left-style: solid;
   border-left-width: 1px;
 }
 
-.bn {
+.#{variables.$global-prefix}bn {
   border-style: none;
   border-width: 0;
 }
