--- a/src/modules/non-responsive/box-sizing.scss
+++ b/src/modules/non-responsive/box-sizing.scss
@@ -1,2 +1,4 @@
-.border-box  { box-sizing: border-box; }
-.content-box { box-sizing: content-box; }
+@use '../../variables';
+
+.#{variables.$global-prefix}border-box  { box-sizing: border-box; }
+.#{variables.$global-prefix}content-box { box-sizing: content-box; }
