--- a/src/modules/non-responsive/miscellaneous.scss
+++ b/src/modules/non-responsive/miscellaneous.scss
@@ -1,11 +1,13 @@
-.list-reset {
+@use '../../variables';
+
+.#{variables.$global-prefix}list-reset {
   list-style: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.stretch {
+.#{variables.$global-prefix}stretch {
   position: absolute;
   top: 0;
   left: 0;
@@ -13,7 +15,7 @@
   right: 0;
 }
 
-.stretch-pseudo::after {
+.#{variables.$global-prefix}stretch-pseudo::after {
   position: absolute;
   top: 0;
   right: 0;
@@ -24,4 +26,6 @@
   background-color: transparent;
 }
 
-.link { text-decoration: none; }
+.#{variables.$global-prefix}link {
+  text-decoration: none;
+}
