--- a/src/modules/non-responsive/text-align.scss
+++ b/src/modules/non-responsive/text-align.scss
@@ -1,4 +1,17 @@
-.tl { text-align: left; }
-.tr { text-align: right; }
-.tc { text-align: center; }
-.tj { text-align: justify; }
+@use '../../variables';
+
+.#{variables.$global-prefix}tl {
+  text-align: left;
+}
+
+.#{variables.$global-prefix}tr {
+  text-align: right;
+}
+
+.#{variables.$global-prefix}tc {
+  text-align: center;
+}
+
+.#{variables.$global-prefix}tj {
+  text-align: justify;
+}
