--- a/src/modules/non-responsive/text-shadow.scss
+++ b/src/modules/non-responsive/text-shadow.scss
@@ -1,6 +1,6 @@
 @use '../../variables';
 @use 'sass:map';
 
-.text-shadow {
+.#{variables.$global-prefix}text-shadow {
   text-shadow: .1em .1em .1em map.get(variables.$colors, 'black-60');
 }
