--- a/src/modules/responsive/_measure.scss
+++ b/src/modules/responsive/_measure.scss
@@ -1,7 +1,15 @@
+@use '../../variables';
+
 @mixin measure($media-suffix) {
+  .#{variables.$global-prefix}measure-narrow#{$media-suffix} {
+    max-width: 20em;
+  }
 
-  .measure-narrow#{$media-suffix} { max-width: 20em; }
-  .measure#{$media-suffix}        { max-width: 30em; }
-  .measure-wide#{$media-suffix}   { max-width: 34em; }
+  .#{variables.$global-prefix}measure#{$media-suffix} {
+    max-width: 30em;
+  }
 
+  .#{variables.$global-prefix}measure-wide#{$media-suffix} {
+    max-width: 34em;
+  }
 }
